--- a/css-posicionamento/Brafé 1/index.html
+++ b/css-posicionamento/Brafé 1/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <header>
+  <header class="menu">
     <div>
       <a href="#"><img src="./img/brafe.png" alt="Brafé"></a>
     </div>
