--- a/css-posicionamento/Brafé 1/index.html
+++ b/css-posicionamento/Brafé 1/index.html
@@ -13,17 +13,17 @@
 <body>
 
   <header class="menu">
-    <div>
+    <div class="menu-container">
       <a href="#"><img src="./img/brafe.png" alt="Brafé"></a>
+      <nav>
+        <ul>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
   </header>
 
   <main>
