--- a/css-posicionamento/Brafé 1/index.html
+++ b/css-posicionamento/Brafé 1/index.html
@@ -14,8 +14,8 @@
 
   <header class="menu">
     <div class="menu-container">
-      <a href="#"><img src="./img/brafe.png" alt="Brafé"></a>
-      <nav>
+      <a class="menu-logo" href="#"><img src="./img/brafe.png" alt="Brafé"></a>
+      <nav class="menu-nav">
         <ul>
           <li><a href="#">Sobre</a></li>
           <li><a href="#">Produtos</a></li>
