--- a/css-posicionamento/Brafé 1/index.html
+++ b/css-posicionamento/Brafé 1/index.html
@@ -64,9 +64,10 @@
     <a class="produtos-btn" href="#">Saiba Mais</a>
   </section>
 
-  <section>
+  <section class="locais">
 
-    <div><img src="./img/botafogo.jpg" alt="Brafé Unidade Botafogo">
+    <div class="locais-item">
+      <img src="./img/botafogo.jpg" alt="Brafé Unidade Botafogo">
       <div>
         <h2>Botafogo</h2>
         <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
@@ -74,7 +75,8 @@
       </div>
     </div>
 
-    <div><img src="./img/iguatemi.jpg" alt="Brafé Unidade Iguatemi">
+    <div class="locais-item">
+      <img src="./img/iguatemi.jpg" alt="Brafé Unidade Iguatemi">
       <div>
         <h2>Iguatemi</h2>
         <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
@@ -82,7 +84,8 @@
       </div>
     </div>
 
-    <div><img src="./img/mineirao.jpg" alt="Brafé Unidade Mineirão">
+    <div class="locais-item">
+      <img src="./img/mineirao.jpg" alt="Brafé Unidade Mineirão">
       <div>
         <h2>Mineirão</h2>
         <p>As condições climáticas não eram as melhores nessa primeira escolha e, entre 1800 e 1850, tentou-se o cultivo.</p>
