--- a/css-posicionamento/Brafé 1/index.html
+++ b/css-posicionamento/Brafé 1/index.html
@@ -94,9 +94,9 @@
     </div>
   </section>
 
-  <section>
-    <div>
-      <div>
+  <section class="assine">
+    <div class="assine-container">
+      <div class="assine-info">
         <h2>Assine Nossa Newsletter</h2>
         <p>Promoções e eventos mensais</p>
       </div>
@@ -108,8 +108,8 @@
     </div>
   </section>
 
-  <footer>
-    <div>
+  <footer class="footer">
+    <div class="footer-container">
       <p>Este é um projeto da Origamid. Mais em origamid.com <br>
         Praia de Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro</p>
       <img src="./img/brafe.png" alt="Brafé">
